@@ -102,6 +102,7 @@ public:
 	// control calibration process
 	virtual Ice::Int startCalibration(ControlType caltype,
 				Ice::Float gridpixels, bool east,
+				Ice::Float declination,
 				const Ice::Current& current);
 	virtual Ice::Double calibrationProgress(const Ice::Current& current);
 	virtual void cancelCalibration(const Ice::Current& current);
