@@ -90,6 +90,8 @@ calibrationcalculatordialog::calibrationcalculatordialog(
 	_cal.type = type;
 	_cal.flipped = false;
 	_cal.meridianFlipped = false;
+	_cal.east = false;
+	_cal.declination = 0;
 
 	// connect elements
 	connect(ui->angleSpinBox, SIGNAL(valueChanged(double)),
@@ -146,7 +148,7 @@ void	calibrationcalculatordialog::updateCalibration() {
 	int	westsign = (_telescopewest) ? 1 : -1;
 	_cal.coefficients[1] = -decsign * pixelspeed * sin(a) * _decrate;
 	_cal.coefficients[4] =  decsign * pixelspeed * cos(a) * _decrate;
-	pixelspeed = pixelspeed * cos(_declination * M_PI / 180);
+	pixelspeed = pixelspeed * cos(_cal.declination * M_PI / 180);
 	_cal.coefficients[0] = pixelspeed * westsign * cos(a);
 	_cal.coefficients[3] = pixelspeed * westsign * sin(a);
 
@@ -178,7 +180,7 @@ void	calibrationcalculatordialog::angleChanged(double angle) {
 }
 
 void	calibrationcalculatordialog::declinationChanged(double declination) {
-	_declination = declination;
+	_cal.declination = declination;
 	updateCalibration();
 }
 
@@ -204,8 +206,8 @@ void	calibrationcalculatordialog::rejectCalibration() {
 }
 
 void	calibrationcalculatordialog::setTelescope(astro::RaDec radec) {
-	_declination = radec.dec().degrees();
-	ui->declinationSpinBox->setValue(_declination);
+	_cal.declination = radec.dec().degrees();
+	ui->declinationSpinBox->setValue(_cal.declination);
 	updateCalibration();
 }
 
